<resources>
    <string name="title_activity_main">Due cards</string>
    <string name="title_activity_add">New card</string>
    <string name="title_activity_manage">Manage</string>
    <string name="app_name">LeitnerFlashcards</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="choose_audio">Choose audio</string>
    <string name="text">Text</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="choose_image">Choose picture</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="manage">Manage</string>
    <string name="view_pager_empty_message">You don\'t have any cards due</string>
    <string name="level">Level</string>
    <string name="due_date">Due date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
</resources>
